--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html>
 <body>
 <h1>Hello humans and aliens!</h1>
-<p>This is Lahari's website. I helped develop this landing page portfolio with Dipto to guide your work. I hope it helps you!</p>
-<h2>How to get set up:</h2>
+<p> Welcome to GEOG4001. The world is a beautiful place, so let's go through this little checklist before the adventure which entails exploring this website. </p>
+  -[ ] I'm feeling good about creating my own portfolio 
+  - [ ] This is going to be a great class for me to develop my interests in GIS 
+  
+  <p> Awesome! I'm glad you're pumped and ready to go. Let's do this! </p> 
+<h2>How to get going:</h2>
+  - [ ] go through Dipto's instructions to set up your Github account and website 
+  - [ ] explore this portfolio and think about: 1) the mark down language that went into creating it 2) how you would improve it 3) how you would design your own portfolio to attract viewers
 </body>
 </html>
