--- a/index.html
+++ b/index.html
@@ -3,12 +3,18 @@
 <body>
 <h1>Hello humans and aliens!</h1>
 <p> Welcome to GEOG4001. The world is a beautiful place, so let's go through this little checklist before the adventure which entails exploring this website. </p>
-  -[ ] I'm feeling good about creating my own portfolio 
-  - [ ] This is going to be a great class for me to develop my interests in GIS 
+  <input type="checkbox"> I'm feeling good about creating my own portfolio <br>
+  <input type="checkbox"> This is going to be a great class for me to develop my interests in GIS <br>
   
   <p> Awesome! I'm glad you're pumped and ready to go. Let's do this! </p> 
 <h2>How to get going:</h2>
-  - [ ] go through Dipto's instructions to set up your Github account and website 
-  - [ ] explore this portfolio and think about: 1) the mark down language that went into creating it 2) how you would improve it 3) how you would design your own portfolio to attract viewers
+  <input type="checkbox"> go through Dipto's instructions to set up your Github account and website <br>
+  <input type="checkbox"> explore this portfolio and think about: 
+  <ol> 
+    <li> 1) the mark down language that went into creating it </li>
+    <li> 2) how you would improve it </li>
+    <li> 3) how you would design your own portfolio to attract viewers </li> 
+    <br> 
+    
 </body>
 </html>
