--- a/index.html
+++ b/index.html
@@ -11,11 +11,21 @@
   <input type="checkbox"> go through Dipto's instructions to set up your Github account and website <br>
   <input type="checkbox"> explore this portfolio and think about: 
   <ol> 
-    <li> 1) the mark down language that went into creating it </li>
-    <li> 2) how you would improve it </li>
-    <li> 3) how you would design your own portfolio to attract viewers </li> 
+    <li> The mark down language that went into creating it </li>
+    <li> How you would improve it </li>
+    <li> How you would design your own portfolio to attract viewers </li> 
   </ol> 
     <br> 
+  
+  <div align="center">
+  <table style="width:100%">
+  <td> About Me </td>
+  <td> Mindset and The Thought Process </td>
+  <td> Words and Meaning </td>
+  <td> Learning </td> 
     
+  </table>
+  </div> 
+  
 </body>
 </html>
