--- a/index.html
+++ b/index.html
@@ -1,12 +1,17 @@
 <!DOCTYPE html>
 <html>
 <body>
-<h1>Hello humans and aliens!</h1>
+<h1 align="center">Hello humans and aliens!</h1>
 <p> Welcome to GEOG4001. The world is a beautiful place, so let's go through this little checklist before the adventure which entails exploring this website. </p>
   <input type="checkbox"> I'm feeling good about creating my own portfolio <br>
   <input type="checkbox"> This is going to be a great class for me to develop my interests in GIS <br>
   
   <p> Awesome! I'm glad you're pumped and ready to go. Let's do this! </p> 
+  
+  <br>
+  <br>
+  <br> 
+  
 <h2>How to get going:</h2>
   <input type="checkbox"> go through Dipto's instructions to set up your Github account and website <br>
   <input type="checkbox"> explore this portfolio and think about: 
@@ -19,10 +24,13 @@
   
   <div align="center">
   <table style="width:100%">
-  <td> About Me </td>
-  <td> Mindset and The Thought Process </td>
-  <td> Words and Meaning </td>
-  <td> Learning </td> 
+    table, th, td {
+  border: 1px solid black;
+}
+  <td align="center"> About Me </td>
+  <td align="center"> Mindset and The Thought Process </td>
+  <td align="center"> Words and Meaning </td>
+  <td align="center"> Learning </td> 
     
   </table>
   </div> 
