--- a/index.html
+++ b/index.html
@@ -1,39 +1,141 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1 align="center">Hello humans and aliens!</h1>
-<p> Welcome to GEOG4001. The world is a beautiful place, so let's go through this little checklist before the adventure which entails exploring this website. </p>
-  <input type="checkbox"> I'm feeling good about creating my own portfolio <br>
-  <input type="checkbox"> This is going to be a great class for me to develop my interests in GIS <br>
-  
-  <p> Awesome! I'm glad you're pumped and ready to go. Let's do this! </p> 
-  
-  <br>
-  <br>
-  <br> 
-  
-<h2>How to get going:</h2>
-  <input type="checkbox"> go through Dipto's instructions to set up your Github account and website <br>
-  <input type="checkbox"> explore this portfolio and think about: 
-  <ol> 
-    <li> The mark down language that went into creating it </li>
-    <li> How you would improve it </li>
-    <li> How you would design your own portfolio to attract viewers </li> 
-  </ol> 
-    <br> 
-  
-  <div align="center">
-  <table style="width:100%">
-    {
-  border: 1px solid black;
+
+<head>
+  <style>
+
+.introduction {
+
+  background-color: pink;
+  border: 1px solid purple;
+  width: 100%;
+  height: 100px;
+
+
 }
-  <td align="center"> About Me </td>
-  <td align="center"> Mindset and The Thought Process </td>
-  <td align="center"> Words and Meaning </td>
-  <td align="center"> Learning </td> 
-    
+
+.introtext {
+  font-size: 33px;
+  font-weight: bold;
+  vertical-align: middle;
+  position: relative;
+  text-align: center;
+
+}
+.description {
+
+  border: 1px solid green;
+  width: 100%;
+  height: 210px;
+  background-color: blanchedalmond;
+  text-align: center;
+
+}
+
+.table {
+
+  width: 100%;
+  height: 100%;
+  border: 2px solid black
+
+
+}
+
+.checklist {
+
+  border: 1px solid purple;
+  width: 100%
+  height: 100px;
+  background-color: blanchedalmond;
+
+}
+
+.links {
+  width: 100%;
+  height: 40px;
+  background-color: blanchedalmond;
+  padding-left: 10px;
+  padding-right: 10px;
+
+
+}
+
+  </style>
+
+
+
+</head>
+<body>
+  <table style="width:100%">
+
+
+<tr width:100%>
+    <td> <div class="introduction"> <div class="introtext"> Let's tell the stories you want to tell. </div> </div> </td>
+
+</tr>
+
+</table>
+
+<table style="width:100%">
+<tr>
+
+<th> <a href="aboutme.html" target="_blank"> About Me </a> </th>
+<th> <a href="learning.html" target="_blank"> Learning </a> </th>
+<th> <a href="" target="_blank"> Mindset and Thought Process </a> </th>
+<th> <a href="" target="_blank"> Work </a> </th>
+
+</tr>
+
+</table>
+
+
+<table>
+
+<tr> <div class="description" align="left">
+
+  <p> The stories we tell as humans are about everything we see around ourselves.
+
+    <br>
+    <br>
+    These could be architectural marvels, the animal kingdom, flora or even the tale of a tool. But who tells our stories?<br> <br>
+  This website showcases the stories of humans that I have told and continue to tell. No, it does not derive from Humans of New York. Rather, it focuses
+  on stories that impact communities. My most complex musings of the world around me are here. Come, lone ranger. Find your seat amongst the legends and tales
+  that surround you.
+
+  </p>
+</tr>
+
+<tr>
+<h1 align="center"> A Primer on my Storytelling </h1>
+
+<p>
+As someone being educated to become a journalist, the way I tell my stories is shaped by the Canadian mediascape.
+This means that my language is simple, my sentences are concise and I use punctuation that amplifies the meaning
+of my story. These tales that transcend time (notice the alliteration there?) are about normal people and narratives that are woven into
+their lives. <br>
+<br>
+<p align="center"> Click the links in the overhead panel to read some of my work and find something that resonates with you. </p>
+
+
+
+
+
+
+ </p>
+</tr>
+
+
+
+
+</div>
+
+</tr>
+
+
+
+
+
+
+
   </table>
-  </div> 
-  
-</body>
 </html>
