--- a/learning.html
+++ b/learning.html
@@ -114,7 +114,7 @@ width: 100%;
     Dipto's help converting shapefiles into geoJSON's and moving through the assignment instructions, I managed to develop a map using Mapbox. <br> <br>
     I used my home state Odisha's geographical data and interesting water table data to create a map. It shows points that are surrounded by abundant water
     sources but are hotspots of scarcity themselves. I used polygons from a Odisha districts file which Dipto sourced for me, and line and point files which
-    the government of Odisha had available. Find my map <a href="mapconfig.js"> here</a>. <br> <br>
+    the government of Odisha had available. Find my map <a href="mapconfig.html"> here</a>. <br> <br>
     The next thing I want to address in this reflection is the amount of time it has taken me to develop these simple things. The webpage for these blog-like
     updates has taken me until now to develop and add content to, but it is so easy. This is especially useful as I progress to publishing my own blog without
     using a pre-existing software, so I can customize it the way I like it. In fact, I can add as much punctuation as I want because I won't be writing news on
