--- a/learning.html
+++ b/learning.html
@@ -44,6 +44,15 @@ width: 100%;
   border-radius: 5px;
   background-color: darkseagreen;
 }
+
+.content3 {
+  width: 100%;
+  border: 4px solid lemonchiffon;
+  border-radius: 5px;
+  background-color: goldenrod;
+
+
+}
 </style>
 <table>
 
@@ -114,7 +123,7 @@ width: 100%;
     Dipto's help converting shapefiles into geoJSON's and moving through the assignment instructions, I managed to develop a map using Mapbox. <br> <br>
     I used my home state Odisha's geographical data and interesting water table data to create a map. It shows points that are surrounded by abundant water
     sources but are hotspots of scarcity themselves. I used polygons from a Odisha districts file which Dipto sourced for me, and line and point files which
-    the government of Odisha had available. Find my map <a href="mapconfig.html"> here</a>. <br> <br>
+    the government of Odisha had available. Find my map <a href="index2.html" target="_blank"> here</a>. <br> <br>
     The next thing I want to address in this reflection is the amount of time it has taken me to develop these simple things. The webpage for these blog-like
     updates has taken me until now to develop and add content to, but it is so easy. This is especially useful as I progress to publishing my own blog without
     using a pre-existing software, so I can customize it the way I like it. In fact, I can add as much punctuation as I want because I won't be writing news on
@@ -124,14 +133,49 @@ width: 100%;
     multimedia journalist, while avoiding semi-colons in my newswriting. Now, the reason why I mentioned 'confused student' in the title for this segment is because
     confusion to me is often a catalyst to learn and do more work. It took me some time to organize this webpage into rows of table (can you believe it?) instead of
     boxes. This was Dipto's pro tip! So my confusion with tr tags and td tags forced me to spend some time on <a href="w3schools.com"> w3schools.com</a> learning how
-    to do basic HTML and CSS. My next challenge which I am not even confused but rather baffled by, is Javascript to make my map even better. Let's see how it goes! 
+    to do basic HTML and CSS. My next challenge which I am not even confused but rather baffled by, is Javascript to make my map even better. Let's see how it goes!
 
 
   </div>
 
 </tr>
 
+<tr>
+<div class="blank">
+</div>
+</tr>
 
+<tr>
+  <div class="post1">
+
+  November 23, 2020: One down, two to go, and the challenges of JS
+
+  </div>
+
+</tr>
+<tr>
+
+  <div class="content3">
+    It took a month. Dipto (with his extensive knowledge of coding) and I (with my fledgling knowledge of code) took a month, collectively, to complete Assignment 1.
+    It is through mental challenges and opportunities for learning that the SaPP program becomes especially enriching for students like myself, who are in a field completely
+    different than their own. <br>
+    My code was working just fine until the first chapter (look at me using technical .js terms!). After days brainstorming and de-bugging, Dipto found a missing comma and an
+    extra bracket that was causing the issues. Once those were gone, the map worked just fine. It could definitely be prettier, but the technicality here is more important than
+    the aesthetics of the map-not that the map looks bad. <br>
+    After the map was ready, I had to integrate it into my website/front-facing portfolio. In that, I was once again stuck. But based on my learning thus far, I decided to try
+    finding a solution myself rather than email Dipto right away. So I did. After exploring some websites and consulting my brother, I realized the simplest solution was to
+    rename the story.js and its corresponding index.html file such that they could be in the same folder as my website's files. Perhaps there is a better way to organize
+    these files, but that's for another time. <br>
+    <br>
+    I'm proud of this achievement, but there is a long way to go. There is more to learn and there are two assignments to get through before the SaPP term ends. I am confident
+    that even if Dipto and I are unable to test those assignments in time, we will both have gained value through this term. For Dipto, I believe the value lays in learning
+    which assignments work and which need tweaking. The challenge there is that my level of knowledge in coding is very different from that of his students. My level is lower,
+    and that is probably better for Dipto to make the assignment descriptions, for instance, comprehensive and accessible to all.
+
+
+  </div>
+
+</tr>
 
 </table>
 
