--- a/index.html
+++ b/index.html
@@ -1,141 +1,318 @@
 <!DOCTYPE html>
 <html>
-
 <head>
-  <style>
+    <meta charset='utf-8' />
+    <title> Biryani Blues in Bhubaneswar </title>
+    <meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
+    <script src='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.js'></script>
+    <link href='https://api.tiles.mapbox.com/mapbox-gl-js/v1.5.0/mapbox-gl.css' rel='stylesheet' />
+    <script src="https://unpkg.com/intersection-observer@0.5.1/intersection-observer.js"></script>
+    <script src="https://unpkg.com/scrollama"></script>
+    <style>
+        body {
+            margin:0;
+            padding:0;
+            font-family: sans-serif;
+        }
+        a, a:hover, a:visited {
+            color: #0071bc;
+        }
+        #map {
+            top:0;
+            height: 100vh;
+            width:100vw;
+            position: fixed;
+            z-index: -5;
+        }
+        #header {
+            margin: auto;
+            width: 100vw;
+        }
+        #header h1, #header h2 {
+            margin: 0;
+            padding: 2vh 2vw;
+            text-align: center;
+        }
+        #footer {
+            width: 100%;
+            min-height: 5vh;
+            padding-top: 2vh;
+            padding-bottom: 2vh;
+            text-align: center;
+            line-height: 25px;
+            font-size: 13px;
+        }
+        #features {
+            padding-top: 10vh;
+            padding-bottom: 10vh;
+            z-index: 100;
+        }
+        .centered {
+            width: 50vw;
+            margin: 0 auto;
+        }
+        .lefty {
+            width: 33vw;
+            margin-left: 5vw;
+        }
+        .righty {
+            width: 33vw;
+            margin-left: 62vw;
+        }
+        .fully {
+            width: 100%;
+            margin: auto;
+        }
+        .light {
+            color: #444;
+            background-color: #fafafa;
+        }
+        .dark {
+            color: #fafafa;
+            background-color: #444;
+        }
+        .step {
+            padding-bottom: 50vh;
+            /* margin-bottom: 10vh; */
+            opacity: 0.25;
+        }
+        .step.active {
+            opacity: 0.9;
+        }
 
-.introduction {
+        .step div {
+            padding:  25px 50px;
+            line-height: 25px;
+            font-size: 13px;
+        }
 
-  background-color: pink;
-  border: 1px solid purple;
-  width: 100%;
-  height: 100px;
+        .step img {
+            width: 100%;
+        }
 
+        @media (max-width: 750px) {
+            .centered, .lefty, .righty, .fully {
+                width: 90vw;
+                margin: 0 auto;
+            }
+        }
 
-}
+        /* Fix issue on mobile browser where scroll breaks  */
+        .mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate.mapboxgl-touch-drag-pan,
+        .mapboxgl-canvas-container.mapboxgl-touch-zoom-rotate.mapboxgl-touch-drag-pan .mapboxgl-canvas {
+            touch-action: unset;
+        }
 
-.introtext {
-  font-size: 33px;
-  font-weight: bold;
-  vertical-align: middle;
-  position: relative;
-  text-align: center;
+        </style>
 
-}
-.description {
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-sheetrock/1.1.4/dist/sheetrock.min.js"></script>
+        <script>
+        var spreadsheet = "https://docs.google.com/spreadsheets/d/12Uw2qU6iM8tNjVsKIA7Kd4MjjFDf8ZJqBQpF7tX00ww/edit?usp=sharing"
 
-  border: 1px solid green;
-  width: 100%;
-  height: 210px;
-  background-color: blanchedalmond;
-  text-align: center;
+        sheetrock({
+          url: https://docs.google.com/spreadsheets/d/12Uw2qU6iM8tNjVsKIA7Kd4MjjFDf8ZJqBQpF7tX00ww/edit?usp=sharing,
+          callback: draw   });
 
-}
-
-.table {
-
-  width: 100%;
-  height: 100%;
-  border: 2px solid black
-
-
-}
-
-.checklist {
-
-  border: 1px solid purple;
-  width: 100%
-  height: 100px;
-  background-color: blanchedalmond;
-
-}
-
-.links {
-  width: 100%;
-  height: 40px;
-  background-color: blanchedalmond;
-  padding-left: 10px;
-  padding-right: 10px;
+          function draw(error, options, response) {
+            //alert("Here");
+            data=response.rows;
+            console.log(response);
+            for(i in data){
+              if(i>1){
+                console.log(data[i].cellsArray[2])
+                var marker = new mapboxgl.Marker()
+                  .setLngLat([data[i].cellsArray[6], data[i].cellsArray[5]])
+                  .setPopup(new mapboxgl.Popup().setHTML("<h2>Location:</h2>"+ data[i].cellsArray[2] + "<p><h2>Type of biryani:</h2>" + data[i].cellsArray[3]))
+                  .addTo(map);
+              }
+            }
+          }
 
 
-}
-
-  </style>
-
-
-
+        </script>
 </head>
 <body>
-  <table style="width:100%">
 
+<div id="map"></div>
+<div id="story"></div>
+<script src="./story.js"></script>
+<script>
+var layerTypes = {
+    'fill': ['fill-opacity'],
+    'line': ['line-opacity'],
+    'circle': ['circle-opacity', 'circle-stroke-opacity'],
+    'symbol': ['icon-opacity', 'text-opacity'],
+    'raster': ['raster-opacity'],
+    'fill-extrusion': ['fill-extrusion-opacity']
+}
 
-<tr width:100%>
-    <td> <div class="introduction"> <div class="introtext"> Let's tell the stories you want to tell. </div> </div> </td>
+var alignments = {
+    'left': 'lefty',
+    'center': 'centered',
+    'right': 'righty',
+    'full': 'fully'
+}
 
-</tr>
+function getLayerPaintType(layer) {
+    var layerType = map.getLayer(layer).type;
+    return layerTypes[layerType];
+}
 
-</table>
+function setLayerOpacity(layer) {
+    var paintProps = getLayerPaintType(layer.layer);
+    paintProps.forEach(function(prop) {
+        var options = {};
+        if (layer.duration) {
+            var transitionProp = prop + "-transition";
+            options = { "duration": layer.duration };
+            map.setPaintProperty(layer.layer, transitionProp, options);
+        }
+        map.setPaintProperty(layer.layer, prop, layer.opacity, options);
+    });
+}
 
-<table style="width:100%">
-<tr>
+var story = document.getElementById('story');
+var features = document.createElement('div');
+features.setAttribute('id', 'features');
 
-<th> <a href="aboutme.html" target="_blank"> About Me </a> </th>
-<th> <a href="learning.html" target="_blank"> Learning </a> </th>
-<th> <a href="" target="_blank"> Mindset and Thought Process </a> </th>
-<th> <a href="" target="_blank"> Work </a> </th>
+var header = document.createElement('div');
 
-</tr>
+if (config.title) {
+    var titleText = document.createElement('h1');
+    titleText.innerText = config.title;
+    header.appendChild(titleText);
+}
 
-</table>
+if (config.subtitle) {
+    var subtitleText = document.createElement('h2');
+    subtitleText.innerText = config.subtitle;
+    header.appendChild(subtitleText);
+}
 
+if (config.byline) {
+    var bylineText = document.createElement('p');
+    bylineText.innerText = config.byline;
+    header.appendChild(bylineText);
+}
 
-<table>
+if (header.innerText.length > 0) {
+    header.classList.add(config.theme);
+    header.setAttribute('id', 'header');
+    story.appendChild(header);
+}
 
-<tr> <div class="description" align="left">
+config.chapters.forEach((record, idx) => {
+    var container = document.createElement('div');
+    var chapter = document.createElement('div');
 
-  <p> The stories we tell as humans are about everything we see around ourselves.
+    if (record.title) {
+        var title = document.createElement('h3');
+        title.innerText = record.title;
+        chapter.appendChild(title);
+    }
 
-    <br>
-    <br>
-    These could be architectural marvels, the animal kingdom, flora or even the tale of a tool. But who tells our stories?<br> <br>
-  This website showcases the stories of humans that I have told and continue to tell. No, it does not derive from Humans of New York. Rather, it focuses
-  on stories that impact communities. My most complex musings of the world around me are here. Come, lone ranger. Find your seat amongst the legends and tales
-  that surround you.
+    if (record.image) {
+        var image = new Image();
+        image.src = record.image;
+        chapter.appendChild(image);
+    }
 
-  </p>
-</tr>
+    if (record.description) {
+        var story = document.createElement('p');
+        story.innerHTML = record.description;
+        chapter.appendChild(story);
+    }
 
-<tr>
-<h1 align="center"> A Primer on my Storytelling </h1>
+    container.setAttribute('id', record.id);
+    container.classList.add('step');
+    if (idx === 0) {
+        container.classList.add('active');
+    }
 
-<p>
-As someone being educated to become a journalist, the way I tell my stories is shaped by the Canadian mediascape.
-This means that my language is simple, my sentences are concise and I use punctuation that amplifies the meaning
-of my story. These tales that transcend time (notice the alliteration there?) are about normal people and narratives that are woven into
-their lives. <br>
-<br>
-<p align="center"> Click the links in the overhead panel to read some of my work and find something that resonates with you. </p>
+    chapter.classList.add(config.theme);
+    container.appendChild(chapter);
+    container.classList.add(alignments[record.alignment]);
+    features.appendChild(container);
+});
 
+story.appendChild(features);
 
+var footer = document.createElement('div');
 
+if (config.footer) {
+    var footerText = document.createElement('p');
+    footerText.innerHTML = config.footer;
+    footer.appendChild(footerText);
+}
 
+if (footer.innerText.length > 0) {
+    footer.classList.add(config.theme);
+    footer.setAttribute('id', 'footer');
+    story.appendChild(footer);
+}
 
+mapboxgl.accessToken = config.accessToken;
 
- </p>
-</tr>
+const transformRequest = (url) => {
+    const hasQuery = url.indexOf("?") !== -1;
+    const suffix = hasQuery ? "&pluginName=journalismScrollytelling" : "?pluginName=journalismScrollytelling";
+    return {
+      url: url + suffix
+    }
+}
 
+var map = new mapboxgl.Map({
+    container: 'map',
+    style: config.style,
+    center: config.chapters[0].location.center,
+    zoom: config.chapters[0].location.zoom,
+    bearing: config.chapters[0].location.bearing,
+    pitch: config.chapters[0].location.pitch,
+    scrollZoom: false,
+    transformRequest: transformRequest
+});
 
+if (config.showMarkers) {
+    var marker = new mapboxgl.Marker({ color: config.markerColor });
+    marker.setLngLat(config.chapters[0].location.center).addTo(map);
+}
 
+// instantiate the scrollama
+var scroller = scrollama();
 
-</div>
+map.on("load", function() {
+    // setup the instance, pass callback functions
+    scroller
+    .setup({
+        step: '.step',
+        offset: 0.5,
+        progress: true
+    })
+    .onStepEnter(response => {
+        var chapter = config.chapters.find(chap => chap.id === response.element.id);
+        response.element.classList.add('active');
+        map[config.mapAnimation || 'flyTo'](chapter.location);
+        if (config.showMarkers) {
+            marker.setLngLat(chapter.location.center);
+        }
+        if (chapter.onChapterEnter.length > 0) {
+            chapter.onChapterEnter.forEach(setLayerOpacity);
+        }
+    })
+    .onStepExit(response => {
+        var chapter = config.chapters.find(chap => chap.id === response.element.id);
+        response.element.classList.remove('active');
+        if (chapter.onChapterExit.length > 0) {
+            chapter.onChapterExit.forEach(setLayerOpacity);
+        }
+    });
+});
 
-</tr>
+// setup resize event
+window.addEventListener('resize', scroller.resize);
 
+</script>
 
-
-
-
-
-
-  </table>
+</body>
 </html>
