--- a/learning.html
+++ b/learning.html
@@ -1,69 +1,161 @@
 <!DOCTYPE html>
 <html>
 
-<style>
 
-  .h1{
-border: 2px solid black;
-width: 100%;
-height: 135px;
-text-align: center;
-font-size: 20px;
-background-color: azure;
-font-family: verdana;
+<head>
+
+  <style>
+
+  body {
+    scroll-padding-top: 40px; /* height of sticky header */
+    var(--top-spacing);
+    margin: var(--top-spacing) auto;
+    max-width: 1000px;
+  }
+
+  /* Ultimately, this is the correct place for scroll-padding */
+  html {
+    scroll-padding-top: 40px; /* height of sticky header */
+    --top-spacing: 100px;
 
   }
 
-  .blank{
+  header.fixed{
+      height: 40px;
+      position: fixed;
+      top: 0;
+      left: 0;
+      padding: 30;
+      width: 100%;
+      text-align: center;
+      background-color: blanchedalmond;
+      padding-top: 10px;
+
+
+        }
+
+
+    .h1{
+  border: 2px solid black;
+  width: 100%;
+  text-align: center;
+  font-size: 20px;
+  background-color: azure;
+  font-family: verdana;
+  overflow:auto;
+    }
+
+    .blank{
+      width: 100%;
+      height:50px;
+
+    }
+
+   .post1{
+  border: 10px solid;
+  font-size:30px;
+  border-style: hidden hidden hidden solid;
+  border-color: white white white blanchedalmond; /* white top, white right, white bottom, blanchedalmond left,  */
+  background-color: beige;
+  width: 100%;
+  }
+
+
+  .content1{
     width: 100%;
-    height:50px;
+    border: 4px solid beige;
+    border-radius: 5px;
+    background-color: palegoldenrod;
 
   }
 
- .post1{
-border: 10px solid;
-font-size:30px;
-border-style: hidden hidden hidden solid;
-border-color: white white white blanchedalmond; /* white top, white right, white bottom, blanchedalmond left,  */
-background-color: beige;
-width: 100%;
-}
+  .content2 {
+    width: 100%;
+    border: 4px solid azure;
+    border-radius: 5px;
+    background-color: darkseagreen;
+  }
+
+  .content3 {
+    width: 100%;
+    border: 4px solid lemonchiffon;
+    border-radius: 5px;
+    background-color: goldenrod;
 
 
-.content1{
-  width: 100%;
-  border: 4px solid beige;
-  border-radius: 5px;
-  background-color: palegoldenrod;
+  }
 
-}
+  .content4{
+    width: 100%;
+    border: 4px solid skyblue;
+    border-radius: 5px;
+    background-color: lightblue;
 
-.content2 {
-  width: 100%;
-  border: 4px solid azure;
-  border-radius: 5px;
-  background-color: darkseagreen;
-}
+  }
 
-.content3 {
-  width: 100%;
-  border: 4px solid lemonchiffon;
-  border-radius: 5px;
-  background-color: goldenrod;
+  .content5 {
+    width: 100%;
+    border: 4px solid blanchedalmond;
+    border-radius: 5px;
+    background-color: lightyellow;
+  }
+
+  img.center {
+      display: block;
+      margin: 0 auto;
+  }
+
+  /*splitscreen begins here*/
+
+  .content6 {
+    width: 100%;
+    border: 4px solid HoneyDew;
+    border-radius: 5px;
+    background-color: LavenderBlush;
+
+  }
+
+  table {
+    border-collapse: collapse;
+  }
 
 
-}
-</style>
+
+
+
+
+
+  </style>
+
+
+</head>
+
+<body>
+<header class='fixed'>
+<table style="width:100%">
+
+<tr class="links">
+
+<th> <a href="aboutme.html" target="_blank"> About Me </a> </th>
+<th> <a href="learning.html" target="_blank"> Learning </a> </th>
+<th> <a href="" target="_blank"> Mindset and Thought Process </a> </th>
+<th> <a href="" target="_blank"> Work </a> </th>
+
+</tr>
+
+</table>
+</header>
+
 <table>
 
 <div class="h1">
 <h1> Learning Code, GIS and Remote Work </h1>
 </div>
 
+<tr>
 <div class="blank">
 </div>
-
-
+</tr>
 
 <tr>
   <div class="post1">
@@ -123,7 +215,7 @@ width: 100%;
     Dipto's help converting shapefiles into geoJSON's and moving through the assignment instructions, I managed to develop a map using Mapbox. <br> <br>
     I used my home state Odisha's geographical data and interesting water table data to create a map. It shows points that are surrounded by abundant water
     sources but are hotspots of scarcity themselves. I used polygons from a Odisha districts file which Dipto sourced for me, and line and point files which
-    the government of Odisha had available. Find my map <a href="index2.html" target="_blank"> here</a>. <br> <br>
+    the government of Odisha had available. Find my map <a href="assignmentmap.html" target="_blank"> here</a>. <br> <br>
     The next thing I want to address in this reflection is the amount of time it has taken me to develop these simple things. The webpage for these blog-like
     updates has taken me until now to develop and add content to, but it is so easy. This is especially useful as I progress to publishing my own blog without
     using a pre-existing software, so I can customize it the way I like it. In fact, I can add as much punctuation as I want because I won't be writing news on
@@ -177,10 +269,116 @@ width: 100%;
 
 </tr>
 
+<tr>
+<div class="blank">
+</div>
+</tr>
+
+
+<tr>
+  <div class="post1">
+
+  December 1, 2020: Assignment 2
+
+  </div>
+
+</tr>
+<tr>
+
+  <div class="content4">
+    My struggle with coding and actually helping Dipto with his assignments is becoming a theme in these journals. Of course, that is a reflection of the truth. But, this entry is more
+    to describe an application of learning from SaPP that I have applied outside school. I recently got hired as a volunteer staff writer at Spheres of Influence, which is an analytical
+    journalism/international policy publication. Until now, they hadn't been using data or geospatial elements to complement their stories. In my interview, I mentioned using simple tools
+    to make their articles more interactive for readers to stay hooked to them. I suggested Mapbox, something so complicated for beginners like myself, but so wonderful for people who are
+    just looking at the visuals and learning from them. Dipto has taught me to make those maps and now I can teach others while also helping enhance a newly-formed not-for-profit. <br>
+    Besides that, it is time to get started on the second assignment. School has been tectic and I've been finding it challenging to allot regular hours to work. Instead, I've been working
+    4-5 hours at a stretch once in 3 days. However, those 4-5 hours do not yield as much as they would if I were actually building something rather than fixing what was going wrong. That's a
+    part of being an amateur coder. Dipto reassures me that small steps too are useful to him, and I hope that that is true. We are going to start workign on Assignment 2, which builds on the
+    first assignment but adds the elements of geocoding and automated data integration to the maps. I already know by the sound of it that it will be challenging but we've got this!
+
+
+  </div>
+
+</tr>
+
+<tr>
+<div class="blank">
+</div>
+</tr>
+
+
+<tr>
+  <div class="post1">
+
+  December 18, 2020: Facing the truth: coding isn't easy and takes times to learn
+
+  </div>
+
+</tr>
+<tr>
+
+  <div class="content5">
+    It's been a while since I wrote an entry in this log because I spent too much time trying to solve issues that Dipto's students will find easy to navigate when they
+    do the second assignment. After doing everything, and a couple of meetings with Dipto, there has been little progress on my end because Dipto has developed all the JS
+    code. All I have done is string together the elements. Still, as of today, the geocoding part of the assignment is not working. There is a single error and even with all
+    the Scripts triggers in place, there is one error. It bothers me that I can't <i> really </i> help because Dipto is doing all the assignments himself too, AND he is
+    doing them on my behalf too. I wish I knew more code coming into SaPP, but even though the term is drawing to an end, I've learned things. I just started learning Javascript
+    today. There's a picture here of one of the modules I completed: <br>
+
+    <img src ="LearnJS.png" style='width:1000px; height:500px;' class="center"> <br>
+
+    I learned the JS function "console.log()" long after I asked Dipto what it was and he explained it to me. Now I know a few operators (mathematical ones), some methods, and
+    objects. The terminology is still new, so I had to check back on Codecademy to make sure I was saying the right things. <br>
+    Anyhow, with these few things, the challenge of assignment 2 just remains to get the geocoding working. Once that is done, the assignment should be done. Dipto and I don't
+    think there will be enough time to complete Assignment 4, but I want to try it anyway so I can challenge myself and continue learning with practical applications. <br>
+    It is this extreme reliability of mine on Dipto and my lack of knowledge of code that poses a challenge to this student-faculty partnership: despite Dipto's reassurances, I know that he has done a lot
+    more work trying to teach me than I have done trying to aid him in beta-testing the projects for his class. I think in the remaining time we have, there is little I can do except for help with
+    looking through things one last time, the instructions for the assignments, and perhaps the way they are presented. There isn't much to do though, again because of the difference in the level of
+    expertise of his students in the topics of this class (4th year Geography/CS students) and me (2nd year journo). Plus, all the materials are already very clear so there isn't much more to do.
+    We have a meeting later today. I'll post an update after that meeting.
+
+  </div>
+
+</tr>
+
+<tr>
+<div class="blank">
+</div>
+</tr>
+
+
+<tr>
+  <div class="post1">
+
+  December 18, 2020: Wrapping up
+
+  </div>
+</tr>
+
+<tr class="content6" cellspacing="0" cellpadding="0">
+      <td>
+
+        The meeting with Dipto went well! We had an honest conversation about what we achieved and what we will do from hereon.
+          The first thing we did was adjust the second assignment to make sure everything worked. The two parts I was missing were:
+      <ol>
+        <li> A single space in an element such that a syntax error made the entire .setLngLat function redundant in the website </li>
+        <li> The wrong address of the map style. Here, I had chosen to make an entirely new map and manually add points, whereas I should have simplified the code
+              and used only a base map from Mapbox. Dipto sent me the code for this and I learned how to do it. </li>
+      </ol>
+          <br> The assignment works now. I have to add more things to the website to make it a standalone page. After that, I'm going to collate all the different pages to create one
+          front-facing portfolio. The website, at the moment, looks something like the image on the right.
+        </td>
+        <td>
+           <img src="assignment2.png" height="320">
+        </td>
+
+</tr>
+
+
 </table>
 
 
-
+</body>
 
 
 
