--- a/index.html
+++ b/index.html
@@ -79,10 +79,9 @@
 <table style="width:100%">
 <tr>
 
-<th> <a href="aboutme.html" target="_blank"> About Me </a> </th>
-<th> <a href="learning.html" target="_blank"> Learning </a> </th>
-<th> <a href="" target="_blank"> Mindset and Thought Process </a> </th>
-<th> <a href="" target="_blank"> Work </a> </th>
+<th> <a href="aboutme.html" target="_blank" onclick="window.open('aboutme.html', '_self');"> About Me </a> </th>
+<th> <a href="learning.html" target="_blank" onclick="window.open('learning.html', '_self');"> Learning </a> </th>
+<th> <a href="work.html" target="_blank" onclick="window.open('work.html', '_self');"> Work </a> </th>
 
 </tr>
 
