--- a/crowdsourcing.html
+++ b/crowdsourcing.html
@@ -138,7 +138,7 @@ header.fixed{
 <tr>
 
       <div class="clearfix">
-        <img src="https://github.com/laharinanda/laharinanda.github.io/blob/main/assignment2.PNG" width="100%">
+        <img src="https://github.com/laharinanda/laharinanda.github.io/blob/main/assignment2.png" width="100%">
         <div class ="centered"> <mark> Biryani Blues in Bhubaneswar </mark> </div>
       </div>
 </tr>
