--- a/aboutme.html
+++ b/aboutme.html
@@ -4,32 +4,21 @@
 <head>
   <style>
   .boxed1 {
-
-
-    background-color: powderblue;
-    border: 3px solid black;
-
-
+    background-color: offwhite;
+    border: 1px solid black;
+    height: 100px;
   }
 
-  .boxed2 {
-    border: 2px solid;
-    border-color: black;
-    background-color: blanchedalmond;
-
-  }
+  
 
   </style>
 </head>
 <div class="boxed1">
   <p align="left"> My name is Lahari Nanda and I am a storyteller. I am a journalist, author, poet and a human. <br>
-  Thus, I have a tendency to tell stories everyday, in different forms. We're all human (I think) and all of us tell stories everyday, in some capacity.
+  Thus, I have a tendency to tell stories everyday, in different forms. We're all human and all of us tell stories everyday, in some capacity. I started telling stories when 
+    I was 6 years old, at creative writing competitions and as tales of fantastic worlds beyond that which we know of. Today, I tell the stories of people, places, and the amazing
+    ways in which both intersect. 
   </p>
 </div>
 
-<div class="boxed2">
-<p align="left">
-  Through this website, I'm telling my story in the form of code. My languages were HTML, some Javascript and a few splashes of markdown Git.
-  How will you interpret the stories on this website?
-</p>
-</div>
+
