--- a/learning.html
+++ b/learning.html
@@ -324,7 +324,7 @@
     doing them on my behalf too. I wish I knew more code coming into SaPP, but even though the term is drawing to an end, I've learned things. I just started learning Javascript
     today. There's a picture here of one of the modules I completed: <br>
 
-    <img src ="https://github.com/laharinanda/laharinanda.github.io/blob/main/LearnJS.PNG" alt ="JS on Codecademy" style='width:1000px; height:500px;' class="center"> <br>
+    <img src ="/main/LearnJS.PNG" alt ="JS on Codecademy" style='width:1000px; height:500px;' class="center"> <br>
 
     I learned the JS function "console.log()" long after I asked Dipto what it was and he explained it to me. Now I know a few operators (mathematical ones), some methods, and
     objects. The terminology is still new, so I had to check back on Codecademy to make sure I was saying the right things. <br>
@@ -368,7 +368,7 @@
           front-facing portfolio. The website, at the moment, looks something like the image on the right.
         </td>
         <td>
-           <img src="https://github.com/laharinanda/laharinanda.github.io/blob/main/assignment2.png" height="320">
+           <img src="main/assignment2.png" height="320">
         </td>
 
 </tr>
