relative path with repo name worked

--- a/learning.html
+++ b/learning.html
@@ -368,7 +368,7 @@
           front-facing portfolio. The website, at the moment, looks something like the image on the right.
         </td>
         <td>
-           <img src="main/assignment2.png" height="320">
+           <img src="laharinanda.github.io/assignment2.png" height="320">
         </td>
 
 </tr>
