--- a/learning.html
+++ b/learning.html
@@ -119,7 +119,12 @@
     border-collapse: collapse;
   }
 
-
+img.right {
+  margin: 0 auto;
+  float: right;
+  width: 200px;
+  height: 100px;
+    }
 
 
 
@@ -368,7 +373,7 @@
           front-facing portfolio. The website, at the moment, looks something like the image on the right.
         </td>
         <td>
-           <img src="laharinanda.github.io/assignment2.PNG" style='width: 200px; height:100px;'>
+           <img src="laharinanda.github.io/assignment2.PNG" style='width: 200px; height:100px;' class="right">
         </td>
 
 </tr>
