--- a/learning.html
+++ b/learning.html
@@ -122,8 +122,8 @@
 img.right {
   margin: 0 auto;
   float: right;
-  width: 200px;
-  height: 100px;
+  width: 400px;
+  height: 200px;
     }
 
 
@@ -373,7 +373,7 @@ img.right {
           front-facing portfolio. The website, at the moment, looks something like the image on the right.
         </td>
         <td>
-           <img src="laharinanda.github.io/assignment2.PNG" style='width: 200px; height:100px;' class="right">
+           <img src="laharinanda.github.io/assignment2.PNG" class="right">
         </td>
 
 </tr>
