--- a/learning.html
+++ b/learning.html
@@ -122,8 +122,8 @@
 img.right {
   margin: 0 auto;
   float: right;
-  width: 400px;
-  height: 200px;
+  width: 400px !important;
+  height: 200px !important;
     }
 
 
